fix landing page overflow

--- a/Eventify/Components/Pages/LandingPage.razor.css
+++ b/Eventify/Components/Pages/LandingPage.razor.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    padding-top: 5rem;
+    padding-top: 8rem;
 }
 .landingPage-contentContainer{
     display:grid;
@@ -71,4 +71,16 @@
     #tagline3 {
         font-size: 3vw;
     }
+}
+
+@media(max-width:375px) {
+    .illustration-container {
+        margin-top: 0;
+    }
+
+
+    .landingPage-container {
+        padding-top: 6rem;
+    }
+
 }
